octoprint_slicer/static/css/slicer.css
/* TODO: Have your plugin's CSS files generated to here. */
#canvas {
    background-color: #000;
    width: 200px;
    height: 200px;
    border: 1px solid black;
    margin: 100px;
    padding: 0px;
    position: static; /* fixed or static */
    top: 100px;
    left: 100px;
}


#slicer-viewport {
    margin-bottom: -5px;
    z-index: -1;
    position: relative;
}

#slicer-viewport > div {
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    display: inline-flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
    z-index: 1;
}

#slicer-viewport > div.filament {
    left: auto;
    right: 0;
    top: calc(50% - 2px);
    transform: translateY(-50%);
    flex-direction: column;
}

#slicer-viewport > div.model {
    left: 0;
    top: calc(50% - 2px);
    transform: translateY(-50%);
    flex-direction: column;
}

#slicer-viewport > div.display {
    bottom: 7px;
    top: auto;
}

#slicer-viewport > div.measurements {
    left: auto;
    right: auto;
    top: auto;
    bottom: auto;
    z-index: 0;
}

#slicer-viewport > div.measurements > p {
    margin: 0;
    padding: 0;
    position: absolute;
    z-index: 0;
    top: 0;
    left: 0;
    pointer-events: none;
    visibility: hidden;
    font-family: "Helvetica";
    color: white;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
    white-space: nowrap;
}

#slicer-viewport > div.values {
    left: 60px;
    top: 50%;
    transform: translateY(-50%);
    flex-direction: column;
    transition: top 0.3s ease-out;
}

#slicer-viewport > div.values.translate {
    top: calc(50% - 160px);
}

#slicer-viewport > div.values.rotate {
    top: calc(50% - 116px);
}

#slicer-viewport > div.values.scale {
    top: calc(50% - 74px);
}

#slicer-viewport > div.cutShape {
    left: 60px;
    top: calc(50% + 148px);
    transform: translateY(-50%);
    display: none;
}

#slicer-viewport > div.cutShape.show {
    display: block;
}

#slicer-viewport > div.values > div, #slicer-viewport > div.cutShape > div {
    padding: 7px;
    margin: 0 0 -9px 9px;
    background-color: #f5f5f5;
    border: 1px solid rgba(0,0,0,0.3);
    border-radius: 15px;
    box-shadow: 0 0 6px #B2B2B2;
    position: relative;
    color: white;
    display: none;
}

#slicer-viewport > div.cutShape > div {
    padding: 4px;
}

#slicer-viewport > div.values > div.show, #slicer-viewport > div.cutShape > div {
    display: block;
}

#slicer-viewport > div.values > div > span, #slicer-viewport > div.cutShape > div > span {
    background-color: #f5f5f5;
    z-index: 0;
    display: block;
    height: 16px;
    position: absolute;
    top: calc(50% - 8px);
    transform: rotate(29deg) skew(-35deg);
    width: 20px;
    box-shadow: -2px 2px 2px 0 rgba(178, 178, 178, 0.4);
    left: -12px;
    border-left: 1px solid rgba(0,0,0,0.3);
    border-bottom: 1px solid rgba(0,0,0,0.3);
}

#slicer-viewport > div.values > div > p {
    font: normal 14px "Helvetica";
    padding: 0;
    margin: 0;
    display: none;
    position: relative;
    z-index: 1;
    color: #333;
}

#slicer-viewport > div.values > div > p.show {
    display: block;
}

#slicer-viewport > div.values > div > p > input {
    width: 75px;
    height: 15px;
    text-align: left;
    border-radius: 4px 0 0 4px;
    padding: 4px 4px 3px 4px;
    margin: 0 0 5px 5px;
    vertical-align: middle;
    line-height: 16px;
}

#slicer-viewport > div.values > div > p > span.axis.x {
    color: #F00;
    text-shadow: 0 1px 0 #fff;
}

#slicer-viewport > div.values > div > p > span.axis.y {
    color: #0F0;
    text-shadow: 0 1px 0 #fff;
}

#slicer-viewport > div.values > div > p > span.axis.z {
    color: #00F;
    text-shadow: 0 1px 0 #fff;
}

#slicer-viewport > div.values > div > p > span:not(.axis) {
    border-radius: 0 4px 4px 0;
    border: 1px solid #ccc;
    border-left: none;
    line-height: 22px;
    height: 22px;
    color: #555;
    vertical-align: middle;
    text-shadow: 0 1px 0 #fff;
    background-color: #eee;
    position: relative;
    top: 0;
    padding: 0 2px;
    margin: 0;
    cursor: default;
    display: inline-block;
    float: right;
}

#slicer-viewport > div.values > div > p:nth-of-type(3) {
    margin-bottom: -5px;
}

#slicer-viewport > div.values.scale > div > p > span:not(.axis) {
    width: 15px;
    cursor: pointer;
    text-align: center;
}

#slicer-viewport > div button {
    display: block;
    cursor: pointer;
    width: 40px;
    height: 40px;
    margin: 2px 4px;
    position: relative;
    padding: 0;
    border-radius: 5px;
    border: 1px solid rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    outline: none;
    flex-shrink: 0;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
    background-image: linear-gradient(to bottom, #fff, #e6e6e6);
    z-index: 1;
}

#slicer-viewport > div.printer button {
    margin: 4px 2px;
}

#slicer-viewport > div button::-moz-focus-inner {
    border: 0 !important;
}

#slicer-viewport > div button img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    height: auto;
}

#slicer-viewport > div.printer > button > img {
    width: 90%;
}

#slicer-viewport > div.filament > button > img {
    top: 50%;
    left: 50%;
    height: calc(100% - 2px);
    width: 12px;
}

#slicer-viewport > div.filament > button > span {
    width: 10px;
    left: calc(50% - 5px);
    height: 30px;
    display: block;
    position: relative;
}

#slicer-viewport > div > button[disabled], #slicer-viewport > div > button.disabled.delete, #slicer-viewport > div > button.disabled.clone, #slicer-viewport > div > button.disabled.reset, #slicer-viewport > div > button.disabled.merge, #slicer-viewport > div > button.cut.off {
    opacity: 0.5;
    pointer-events: none;
}

